--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^18.0.0",
+    "firebase": "^9.6.10",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-firebaseui": "^6.0.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "eslint": "8.13.0",
