--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.0",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.0",
+    "autoprefixer": "^10.4.4",
     "firebase": "^9.6.10",
+    "lodash": "^4.17.21",
     "next": "12.1.4",
+    "postcss": "^8.4.12",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-firebaseui": "^6.0.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
