--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.0",
     "autoprefixer": "^10.4.4",
+    "classnames": "^2.3.1",
     "firebase": "^9.6.10",
     "lodash": "^4.17.21",
     "next": "12.1.4",
